jira-integration/core/objects/Account/fields/Jira_Error__c.field-meta.xml
<CustomField>
    <fullName>Jira_Error__c</fullName>
    <label>Jira Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>