jira-integration/core/objects/Account/fields/JIRA_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>JIRA Project Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>